# SEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: Cube.fbx  Sphere.fbx  gy.fbx
Shaders/: Blit.sshader  Blit.sshader.fragment.spv  Brdf.hlsl  CubemapFilter.sshader  CubemapFilter.sshader.fragment.spv  Error.sshader  Error.sshader.fragment.spv  GenBRDFLUT.sshader  GenBRDFLUT.sshader.fragment.spv  IrradianceCube.sshader  IrradianceCube.sshader.fragment.spv  IrradianceCube.sshader.vertex.spv  MonteCarlo.hlsl  PBSBase.sshader  PBSBase.sshader.fragment.spv  SCommon.hlsl  ScreenSpaceOutline.sshader  ScreenSpaceOutline.sshader.fragment.spv  Shadow.sshader  Shadow.sshader.fragment.spv  Shadow.sshader.vertex.spv  test.frag  test.sshader  test.vert  test.vert2
Sources/: Application.cpp  VkEngine.cpp  VkEngine.h
Sources/AssetManager/: AssetManager.cpp  AssetManager.h  DirWatcherBase.cpp  DirWatcherBase.h  ShaderFileWatcher.cpp  ShaderFileWatcher.h
Sources/Components/: BRDFLUTRenderComponent.cpp  BRDFLUTRenderComponent.h  IrradianceCubeComponent.cpp  IrradianceCubeComponent.h  ReflectionCaptureComponent.cpp  ReflectionCaptureComponent.h
Sources/Core/: Array.h  BaseTypes.h  Core.h  Delegate.h  Log.h  Macros.h  Map.h
Sources/CoreObjects/: Actor.cpp  Actor.h  CameraComponent.cpp  CameraComponent.h  CameraManager.cpp  CameraManager.h  Controller.cpp  Controller.h  Engine.cpp  Engine.h  EngineModuleBase.cpp  EngineModuleBase.h  LocalPlayer.cpp  LocalPlayer.h  Material.cpp  Material.h  PlayerController.cpp  PlayerController.h  PrimitiveComponent.cpp  PrimitiveComponent.h  SCoreComponentBase.cpp  SCoreComponentBase.h  SObject.cpp  SObject.h  SSceneComponent.cpp  SSceneComponent.h  World.cpp  World.h
Sources/GUI/: ImGUIPort.cpp  ImGUIPort.h  SImGUI.cpp  SImGUI.h  SMaterialEditor.cpp  SMaterialEditor.h  SWidgetBase.cpp  SWidgetBase.h
Sources/GUI/BaseWidgets/: SCommonWidget.cpp  SCommonWidget.h
Sources/Input/: Input.cpp  Input.h
Sources/Interfaces/: TickableInterface.h
Sources/Maths/: Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Quat.cpp  Quat.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h
Sources/Platform/: CImgTextureLoader.cpp  CImgTextureLoader.h  FbxMeshImporter.cpp  FbxMeshImporter.h  MeshImporter.cpp  MeshImporter.h  Path.cpp  Path.h  Platform.cpp  Platform.h  TextureLoader.cpp  TextureLoader.h  Window.cpp  Window.h
Sources/Platform/FbxCommon/: Common.cxx
Sources/RHI/: CommandBuffer.cpp  CommandBuffer.h  DepthTexture.cpp  DepthTexture.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndexBuffer.cpp  IndexBuffer.h  RHI.cpp  RHI.h  RHIUtils.cpp  RHIUtils.h  RenderPass.cpp  RenderPass.h  RenderTargetGroup.cpp  RenderTargetGroup.h  RenderTexture.cpp  RenderTexture.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  UniformBuffer.cpp  UniformBuffer.h  (+2 more)
Sources/Rendering/: LightRenderData.cpp  LightRenderData.h  Material.cpp  Material.h  MaterialParameter.cpp  MaterialParameter.h  Mesh.cpp  Mesh.h  PostProcess.cpp  PostProcess.h  PostProcessManager.cpp  PostProcessManager.h  PrimitiveRenderData.cpp  PrimitiveRenderData.h  RenderTargetCube.cpp  RenderTargetCube.h  Renderer.cpp  Renderer.h  RenderingUtils.cpp  RenderingUtils.h  SceneView.cpp  SceneView.h  Shader.cpp  Shader.h
Sources/Systems/ShaderManager/: ShaderManager.cpp  ShaderManager.h
